Introduced Mockito to properly unit test InventorySystem

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <junit.version>4.12</junit.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <jacoco-maven-plugin.version>0.8.3</jacoco-maven-plugin.version>
+    <mockito-core.version>2.23.4</mockito-core.version>
   </properties>
 
   <dependencies>
@@ -22,6 +23,12 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>${mockito-core.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
